--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+token.signing.key = my_super_s3cr3t_key
