Custom error message, minimal security implementation

--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 token.signing.key = my_super_s3cr3t_key
+logging.level.org.springframework.security=DEBUG
