--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=apigateway
+server.port=8082
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8083/eureka}
