--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,51 @@
 version: '3.8'
 
 services:
-  service_discovery:
+  service-discovery:
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
     ports:
-      - "8761:8761"
-
-  auth_service:
+      - "8083:8083"
+  apigateway:
     build:
-      context: ./login
+      context: ./apigateway
       dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
-    depends_on:
-      - service_discovery
-
-  audit_service:
-    build:
-      context: ./userChanges
-      dockerfile: Dockerfile
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-discovery:8083/eureka
     ports:
       - "8082:8082"
     depends_on:
-      - service_discovery
-
-  apigateway:
+        - service-discovery
+  login:
     build:
-      context: ./ApiGateway
+      context: ./login
       dockerfile: Dockerfile
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-discovery:8083/eureka
     ports:
       - "8080:8080"
     depends_on:
-      - service_discovery
-      - auth_service
-      - audit_service
+      - service-discovery
+  audit-service:
+    build:
+      context: ./userChanges
+      dockerfile: Dockerfile
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-discovery:8083/eureka
+    ports:
+      - "8081:8081"
+    depends_on:
+      - service-discovery
+  postgres-db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "4200:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+volumes:
+  postgres_data:
