--- a/login/Dockerfile
+++ b/login/Dockerfile
@@ -18,7 +18,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the jar file from the build stage
-COPY --from=build /app/target/apigateway-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/login-0.0.1-SNAPSHOT.jar app.jar
 
 # Expose the port that the application will run on
 EXPOSE 8080
