--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=eureka-server-discovery
+server.port: 8083
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.instance.hostname=service-discovery
+eureka.client.serviceUrl.defaultZone =http://localhost:8083/eureka/
