--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=apigateway
 server.port=8082
 eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8083/eureka}
+
+spring.cloud.gateway.discovery.locator.enabled=true
+
+spring.cloud.gateway.routes[0].id=login-service
+spring.cloud.gateway.routes[0].uri=lb://authentication
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/auth/(?<segment>.*), /${segment}
