--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=authentication
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/java_db
-spring.datasource.username=your_username
+spring.datasource.url=jdbc:postgresql://localhost:5432/java_db
+spring.datasource.username=postgres
 spring.datasource.password=your_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
