Проверенна и добавлена вся цепочка авторизации и регистрации через Api Gateway с асинхронным публичнм ключом и Service Discovery

--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -25,6 +25,6 @@ COPY --from=build /app/target/apigateway-0.0.1-SNAPSHOT.jar app.jar
 
 # Expose the port that the application will run on
 EXPOSE 8080
-
+EXPOSE 5006
 # Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006", "-jar", "app.jar"]
