--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   service-discovery:
     build:
-      context: ./
+      context: ./eureka-service-discovery
       dockerfile: Dockerfile
     ports:
       - "8083:8083"
@@ -15,6 +15,7 @@ services:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-discovery:8083/eureka
     ports:
       - "8082:8082"
+      - "5006:5006"
     depends_on:
         - service-discovery
   login:
@@ -25,7 +26,7 @@ services:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://service-discovery:8083/eureka
     ports:
       - "8080:8080"
-      - "5005:5005"
+      - "5008:5008"
     depends_on:
       - service-discovery
   audit-service:
