--- a/eureka-service-discovery/Dockerfile
+++ b/eureka-service-discovery/Dockerfile
@@ -1,3 +1,4 @@
+# Stage 1: Build
 FROM maven:3.8.3-openjdk-17 AS build
 
 # Set working directory
@@ -20,11 +21,12 @@ FROM openjdk:17-jdk-slim
 
 # Set working directory
 WORKDIR /app
+
 # Copy the jar file from the build stage
 COPY --from=build /app/target/*.jar app.jar
 
 # Expose the application's port
 EXPOSE 8083
-EXPOSE 5008
+EXPOSE 5007
 # Command to run the application
-ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5007", "-jar", "app.jar"]
