--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,17 +1,26 @@
 spring.application.name=apigateway
 server.port=8082
 
-eureka.client.service-url.defaultZone=http://localhost:8083/eureka
+eureka.client.service-url.defaultZone=http://service-discovery:8083/eureka
+#eureka.client.service-url.defaultZone=http://localhost:8083/eureka
 
 spring.cloud.gateway.discovery.locator.enabled=true
 
-spring.cloud.gateway.routes[0].id=login-service
-spring.cloud.gateway.routes[0].uri=lb://authentication
-spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
-spring.cloud.gateway.routes[0].filters[0]=RewritePath=/auth/(?<segment>.*), /${segment}
 
 
-spring.cloud.gateway.routes[1].id=audit-service
-spring.cloud.gateway.routes[1].uri=lb://audit-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/audit/**
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/audit/(?<segment>.*), /${segment}
+spring.cloud.gateway.routes[0].id=add-ap-route
+spring.cloud.gateway.routes[0].uri=lb://ADAPP
+spring.cloud.gateway.routes[0].predicates[0]=Path=/add-ap/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/add-ap/(?<segment>.*), /${segment}
+
+spring.cloud.gateway.routes[1].id=authentication-service
+spring.cloud.gateway.routes[1].uri=lb://AUTHENTICATION
+spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/auth/(?<segment>.*), /${segment}
+
+
+
+spring.cloud.gateway.routes[2].id=user-changes-service
+spring.cloud.gateway.routes[2].uri=lb://USERCHANGES
+spring.cloud.gateway.routes[2].predicates[0]=Path=/userChanges/**
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/userChanges/(?<segment>.*), /${segment}
