--- a/eurekaDiscovery/Dockerfile
+++ b/eurekaDiscovery/Dockerfile
@@ -23,7 +23,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the jar file from the build stage
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/target/eurekaDiscovery-0.0.1-SNAPSHOT.jar app.jar
 
 # Expose the application's port
 EXPOSE 8083
