CORS настроен и фронт

--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -106,6 +106,30 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.5.0</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<executable>ng</executable>
+					<workingDirectory>src/main/resources/angularclient/front</workingDirectory>
+					<arguments>
+						<argument>build</argument>
+					</arguments>
+					<environmentVariables>
+						<LANG>en_US</LANG>
+					</environmentVariables>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
