--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=apigateway
 server.port=8082
 
-eureka.client.service-url.defaultZone=http://service-discovery:8083/eureka
-#eureka.client.service-url.defaultZone=http://localhost:8083/eureka
+#eureka.client.service-url.defaultZone=http://service-discovery:8083/eureka
+eureka.client.service-url.defaultZone=http://localhost:8083/eureka
 
 spring.cloud.gateway.discovery.locator.enabled=true
 
