--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -5,8 +5,11 @@ server.port=8082
 eureka.client.service-url.defaultZone=http://localhost:8083/eureka
 
 spring.cloud.gateway.discovery.locator.enabled=true
-
-
+spring.cloud.gateway.httpclient.connect-timeout=5000
+spring.cloud.gateway.httpclient.response-timeout=10s
+logging.level.reactor.netty.http.client=DEBUG
+logging.level.reactor.netty.http.server=DEBUG
+spring.cloud.gateway.httpclient.wiretap=true
 
 spring.cloud.gateway.routes[0].id=add-ap-route
 spring.cloud.gateway.routes[0].uri=lb://ADAPP
