--- a/userChanges/src/main/resources/application.properties
+++ b/userChanges/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=userChanges
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/java_db
+spring.datasource.url=jdbc:postgresql://localhost:4200/java_db_wiki
 spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.datasource.driver-class-name=org.postgresql.Driver
