--- a/WikiDotNet/AdApp/AdApp.csproj
+++ b/WikiDotNet/AdApp/AdApp.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.3.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
+    <PackageReference Include="RabbitMQ.Client.Core.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Steeltoe.Common" Version="3.2.8" />
     <PackageReference Include="Steeltoe.Common.Abstractions" Version="3.2.8" />
     <PackageReference Include="Steeltoe.Common.Hosting" Version="3.2.8" />
