--- a/userChanges/src/main/resources/application.properties
+++ b/userChanges/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
